DOC-2300: Replace Spell Checker Pro to Spell Checker in 7x docs project.

--- a/modules/ROOT/pages/autocorrect.adoc
+++ b/modules/ROOT/pages/autocorrect.adoc
@@ -76,7 +76,7 @@ Auto-capitalization will not operate on the entered string if
 
 . Auto-capitalization interferes with `linkchecker`, the xref:linkchecker.adoc[Link Checker] Premium plugin.
 
-. When the {pluginname} is used with the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro] Premium plugin, autocorrection and capitalization are disabled when a non-English language is selected.
+. When the {pluginname} is used with the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] Premium plugin, autocorrection and capitalization are disabled when a non-English language is selected.
 +
 Autocorrection and capitalization can, however, be re-enabled by selecting the *Tools > Autocorrect* menu item and the *Tools > Capitalization* menu item respectively.
 
