--- a/modules/ROOT/pages/content-localization.adoc
+++ b/modules/ROOT/pages/content-localization.adoc
@@ -7,11 +7,11 @@
 
 include::partial$configuration/content_langs.adoc[leveloffset=+1]
 
-== Setting the language options for Spell Checker Pro
+== Setting the language options for Spell Checker
 
-To set the default language for Spell Checker Pro plugin, see: xref:introduction-to-tiny-spellchecker.adoc#spellchecker_language[The Spell Checker Pro plugin - `+spellchecker_language+`].
+To set the default language for Spell Checker plugin, see: xref:introduction-to-tiny-spellchecker.adoc#spellchecker_language[The Spell Checker plugin - `+spellchecker_language+`].
 
-To customize the list of spell checking languages available to your users through the Spell Checker Pro plugin, see: xref:introduction-to-tiny-spellchecker.adoc#spellchecker_languages[The Spell Checker Pro plugin - `+spellchecker_languages+`].
+To customize the list of spell checking languages available to your users through the Spell Checker plugin, see: xref:introduction-to-tiny-spellchecker.adoc#spellchecker_languages[The Spell Checker plugin - `+spellchecker_languages+`].
 
 == Changing the default text direction of content
 
