--- a/modules/ROOT/pages/features-only.adoc
+++ b/modules/ROOT/pages/features-only.adoc
@@ -30,7 +30,7 @@ include::partial$misc/admon-cloud-configured-options.adoc[]
 The following is a complete example, where:
 
 * The {cloudname} `+API key+` has the value `+no-api-key+`.
-* The {cloudname} has the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro] plugin enabled.
+* The {cloudname} has the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] plugin enabled.
 
 [source,js,subs="attributes+"]
 ----
