--- a/modules/ROOT/pages/introduction-to-premium-selfhosted-services.adoc
+++ b/modules/ROOT/pages/introduction-to-premium-selfhosted-services.adoc
@@ -1,6 +1,6 @@
 = Server-side component installation
 :description: Server-side components for premium plugins like spelling as-you-type.
-:keywords: enterprise, tinymcespellchecker, spell check, spell checker pro, editimage, server
+:keywords: enterprise, tinymcespellchecker, spell check, Spell Checker, editimage, server
 
 Some {productname} Enterprise features require a server-side component. If you're using the {cloudname} solution, we've done all the hard work for you and you can skip this page. Alternatively, if you've purchased our Self-hosted solution then please read on.
 
