--- a/modules/ROOT/pages/spell-checking.adoc
+++ b/modules/ROOT/pages/spell-checking.adoc
@@ -18,6 +18,6 @@ tinymce.init({
 
 include::partial$misc/admon-ctrl-right-click.adoc[]
 
-== TinyMCE Spell Checker Pro plugin
+== TinyMCE Spell Checker plugin
 
-Use the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro plugin] for scalable enterprise-grade spell check as-you-type functionality. *Spell Checker Pro* requires both a client-side plugin to be configured and a server-side component to be installed and configured.
+Use the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker plugin] for scalable enterprise-grade spell check as-you-type functionality. *Spell Checker* requires both a client-side plugin to be configured and a server-side component to be installed and configured.
