--- a/modules/ROOT/pages/spelling.adoc
+++ b/modules/ROOT/pages/spelling.adoc
@@ -2,6 +2,6 @@
 :navtitle: Spelling options
 :description: TinyMCE spell checking
 
-include::partial$misc/spell-checker-pro.adoc[]
+include::partial$misc/spell-checker.adoc[]
 
 include::partial$configuration/browser_spellcheck.adoc[]
