--- a/modules/ROOT/partials/configuration/browser_spellcheck.adoc
+++ b/modules/ROOT/partials/configuration/browser_spellcheck.adoc
@@ -3,7 +3,7 @@
 
 This option configures {productname} to use the browser's native spell checker.
 
-For integrated spell-checking, check out the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro] plugin.
+For integrated spell-checking, check out the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] plugin.
 
 *Type:* `+Boolean+`
 
