--- a/modules/ROOT/partials/configuration/spellchecker_language.adoc
+++ b/modules/ROOT/partials/configuration/spellchecker_language.adoc
@@ -1,7 +1,7 @@
 [[spellchecker_language]]
 == `+spellchecker_language+`
 
-This option specifies the default language used by Spell Checker Pro.
+This option specifies the default language used by Spell Checker.
 
 *Type:* `+String+`
 
