--- a/modules/ROOT/partials/configuration/spellchecker_on_load.adoc
+++ b/modules/ROOT/partials/configuration/spellchecker_on_load.adoc
@@ -1,7 +1,7 @@
 [[spellchecker_on_load]]
 == `+spellchecker_on_load+`
 
-NOTE: Removed in Spell Checker Pro 2.0 (TinyMCE 5.2). Spell Checker Pro will now always run on editor initialization. To disable Spell Checker Pro on load, use xref:introduction-to-tiny-spellchecker.adoc#spellchecker_active[`+spellchecker_active+`].
+NOTE: Removed in Spell Checker 2.0 (TinyMCE 5.2). Spell Checker will now always run on editor initialization. To disable Spell Checker on load, use xref:introduction-to-tiny-spellchecker.adoc#spellchecker_active[`+spellchecker_active+`].
 
 This option runs the spellchecker when the contents of the editor is loaded.
 
