--- a/modules/ROOT/partials/misc/spellchecker-languages.adoc
+++ b/modules/ROOT/partials/misc/spellchecker-languages.adoc
@@ -1,7 +1,7 @@
 [[supported-languages]]
 == Supported languages
 
-The following languages are supported for the Spell Checker Pro plugin. All of the listed languages are supported for customers using {productname} on {cloudname}.
+The following languages are supported for the Spell Checker plugin. All of the listed languages are supported for customers using {productname} on {cloudname}.
 
 [cols="2,^1,^1,^1",options="header"]
 |===
