--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -181,7 +181,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Spell Checker Pro
+:pluginname: Spell Checker
 :plugincode: tinymcespellchecker
 :pluginpage: introduction-to-tiny-spellchecker.adoc
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
