--- a/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
+++ b/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
@@ -1,11 +1,11 @@
-The following events are provided by the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro plugin].
+The following events are provided by the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker plugin].
 
 [cols="1,1,2",options="header"]
 |===
 |Name |Data |Description
 |SpellcheckerIgnore |`+{ word: string }+` |Fired when a single instance of a word has been marked as ignored.
 |SpellcheckerIgnoreAll |`+{ word: string, language: string }+` |Fired when all instances of a word (in a certain language) have been marked as ignored.
-|SpellcheckError |`+{ message: string }+` |Fired when a spellchecker error occurs, such as when the Spell Checker Pro service can't be reached.
+|SpellcheckError |`+{ message: string }+` |Fired when a spellchecker error occurs, such as when the Spell Checker service can't be reached.
 |SpellcheckStart |N/A |Fired when spellchecking is enabled.
 |SpellcheckEnd |N/A |Fired when spellchecking is disabled.
 |SpellcheckerLanguageChanged |`+{ language: string, prevLanguage: string }+` |Fired when the spellchecking language is changed.
