--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -43,7 +43,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :!altplugincode:
 
 :plugincategory: premium
-:pluginname: Advanced Tables
+:pluginname: Enhanced Tables
 :plugincode: advtable
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
