--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -214,7 +214,7 @@ Commands are available for the following plugins:
 
 * xref:advancedcode[Advanced Code]
 * xref:advancedlists[Advanced Lists]
-* xref:advancedtables[Advanced Tables]
+* xref:Enhanced Tables[Enhanced Tables]
 * xref:anchor[Anchor]
 * xref:autoresize[Autoresize]
 * xref:casechange[Case Change]
@@ -263,10 +263,10 @@ The following commands require the xref:advlist.adoc[Advanced Lists (`+advlist+`
 
 include::partial$commands/advlist-cmds.adoc[leveloffset=+3]
 
-[[advancedtables]]
-==== Advanced Tables
+[[Enhanced Tables]]
+==== Enhanced Tables
 
-The following commands require the xref:advtable.adoc[Advanced Tables (`+advtable+`)] plugin.
+The following commands require the xref:advtable.adoc[Enhanced Tables (`+advtable+`)] plugin.
 
 include::partial$commands/advtable-cmds.adoc[leveloffset=+3]
 
