--- a/modules/ROOT/pages/table-options.adoc
+++ b/modules/ROOT/pages/table-options.adoc
@@ -1,12 +1,12 @@
 = Table options
 :description: TinyMCE tables
 
-== {productname} Table & Advanced Tables plugins
+== {productname} Table & Enhanced Tables plugins
 
 {productname} has built-in table functionality. However, there are two plugins that provide additional functionality for tables:
 
 * Table is an open source plugin that provides improved table handling through UI components, including dialogs, context menus, context toolbars, menu items and toolbar buttons. For information, see the xref:table.adoc[Table plugin].
-* Advanced Tables is a premium plugin that extends the xref:table.adoc[Table plugin] by adding advanced functionality, including sort options for rows and columns, and row numbering column functionality for tables. For information, see the xref:advtable.adoc[Advanced Tables plugin].
+* Enhanced Tables is a premium plugin that extends the xref:table.adoc[Table plugin] by adding advanced functionality, including sort options for rows and columns, and row numbering column functionality for tables. For information, see the xref:advtable.adoc[Enhanced Tables plugin].
 
 IMPORTANT: The following options apply to the core table functionality and may also affect `table` plugin and `advtable` plugin functionality.
 
