--- a/modules/ROOT/partials/commands/advtable-cmds.adoc
+++ b/modules/ROOT/partials/commands/advtable-cmds.adoc
@@ -1,8 +1,8 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|mceAdvancedTableSort |Opens the Advanced Table Sort Dialog for the current selection or cursor location.
-|mceSortTableAdvanced |Performs an Advanced Table Sort. For details, see xref:using-mcesorttableadvanced[Using `+mceSortTableAdvanced+`].
+|mceAdvancedTableSort |Opens the Enhanced Table Sort Dialog for the current selection or cursor location.
+|mceSortTableAdvanced |Performs an Enhanced Table Sort. For details, see xref:using-mcesorttableadvanced[Using `+mceSortTableAdvanced+`].
 |mceSortTableByColumnAsc |Sorts the current table ascending by column based on the current cursor position or selection.
 |mceSortTableByColumnDesc |Sorts the current table descending by column based on the current cursor position or selection.
 |mceSortTableByRowAsc |Sorts the current table ascending by row based on the current cursor position or selection.
