--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -17,12 +17,6 @@ How to setup {productname}’s Advanced Code Editor plugin.
 
 a|
 [.lead]
-xref:advtable.adoc[Advanced Tables]
-
-Add advanced functionality to tables.
-
-a|
-[.lead]
 xref:advanced-templates.adoc[Advanced Templates]
 
 Create and edit complex templates in {productname} for use with {productname}.
@@ -68,6 +62,12 @@ a|
 xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 
 Add rich media previews inside {productname}.
+
+a|
+[.lead]
+xref:advtable.adoc[Enhanced Tables]
+
+Add advanced functionality to tables.
 
 a|
 [.lead]
