--- a/modules/ROOT/partials/misc/available-context-menu-sections.adoc
+++ b/modules/ROOT/partials/misc/available-context-menu-sections.adoc
@@ -20,7 +20,7 @@ The identifier below will add a context menu _section_ containing one or more it
 |lists |xref:lists.adoc[Lists] |Adds the _List properties..._ item for opening the *List Properties* dialog.
 |configurepermanentpen |xref:permanentpen.adoc[Permanent Pen] |Adds the _Permanent pen properties..._ item for opening the *Permanent Pen Properties* dialog when the permanent pen is in use.
 |spellchecker |xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] |Adds a list suggested corrections, an _Ignore_ item, and an _Ignore all_ item.
-|table |xref:table.adoc[Table] |Adds table related context menu items, including Advanced Tables context menu items (if the Advanced Tables plugin is enabled).
+|table |xref:table.adoc[Table] |Adds table related context menu items, including Enhanced Tables context menu items (if the Enhanced Tables plugin is enabled).
 |===
 
 For a list of available menu items that can be added to the context menu, see: xref:available-menu-items.adoc[Menu Items Available for {productname}].
