--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -38,7 +38,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :!altplugincode:
 
 :plugincategory: premium
-:pluginname: Advanced Tables
+:pluginname: Enhanced Tables
 :plugincode: advtable
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
