--- a/modules/ROOT/partials/menu-item-ids/advtable-menu-items.adoc
+++ b/modules/ROOT/partials/menu-item-ids/advtable-menu-items.adoc
@@ -1,6 +1,6 @@
 [cols="1,1,2",options="header"]
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
-|`+advtablesort+` |Table |Advanced tables sort menu item with related controls.
+|`+advtablesort+` |Table |Enhanced Tables sort menu item with related controls.
 |`+advtablerownumbering+` |_Not Applicable_ |Adds or removes (toggles) a row numbering column on the selected table.
 |===
