--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -1,6 +1,6 @@
 * xref:a11ychecker.adoc[Accessibility Checker]
 * xref:advcode.adoc[Advanced Code Editor]
-* xref:advtable.adoc[Advanced Tables]
+* xref:advtable.adoc[Enhanced Tables]
 * xref:advanced-typography.adoc[Advanced Typography]
 * xref:casechange.adoc[Case Change]
 * xref:checklist.adoc[Checklist]
