DOC-2307: add note to export plugin.adoc to inform users about plugin name change in v7.

--- a/modules/ROOT/pages/export.adoc
+++ b/modules/ROOT/pages/export.adoc
@@ -8,6 +8,9 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
+[NOTE]
+The {pluginname} plugin has been replaced by the improved **Export to PDF** and **Export to Word** plugins starting with {productname} 7.
+
 The {pluginname} plugin adds the ability to export content from the editor to a user's local machine in various formats. For a list of available exporters and information on what they support, see the xref:exporters[Exporters section].
 
 == Interactive example
