DOC-2230: Rename Advanced Lists plugin to List Styles for TinyMCE 7.0.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -352,7 +352,6 @@
 **** xref:tinydrive-changelog.adoc[Changelog]
 ** Open source plugins
 *** xref:accordion.adoc[Accordion]
-*** xref:advlist.adoc[Advanced List]
 *** xref:anchor.adoc[Anchor]
 *** xref:autolink.adoc[Autolink]
 *** xref:autoresize.adoc[Autoresize]
@@ -369,6 +368,7 @@
 *** xref:insertdatetime.adoc[Insert Date/Time]
 *** xref:link.adoc[Link]
 *** xref:lists.adoc[Lists]
+*** xref:advlist.adoc[List Styles]
 *** xref:media.adoc[Media]
 *** xref:nonbreaking.adoc[Nonbreaking Space]
 *** xref:pagebreak.adoc[Page Break]
