--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -5,7 +5,7 @@
 :pluginname: Lists
 :plugincode: lists
 
-The `+lists+` plugin allows you to add numbered and bulleted lists to {productname}. To enable advanced lists (e.g. alpha numbered lists, square bullets) you should also enable the xref:advlist.adoc[Advanced List] (`+advlist+`) plugin.
+The `+lists+` plugin allows you to add numbered and bulleted lists to {productname}. To enable List Styles (e.g. alpha numbered lists, square bullets) you should also enable the xref:advlist.adoc[List Style] (`+advlist+`) plugin.
 
 The plugin also normalizes list behavior between browsers. Enable it if you have problems with consistency making lists.
 
