--- a/modules/ROOT/partials/index-pages/opensource-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/opensource-plugins.adoc
@@ -11,12 +11,6 @@ Create expandable and collapsible sections.
 
 a|
 [.lead]
-xref:advlist.adoc[Advanced List]
-
-Create styled number and bulleted lists.
-
-a|
-[.lead]
 xref:anchor.adoc[Anchor]
 
 Insert anchors (sometimes referred to as a bookmarks).
@@ -110,6 +104,12 @@ a|
 xref:lists.adoc[Lists]
 
 Normalize list behavior between browsers.
+
+a|
+[.lead]
+xref:advlist.adoc[List Styles]
+
+Create styled number and bulleted lists.
 
 a|
 [.lead]
