--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -24,7 +24,7 @@ include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
 ** xref:autocorrect[Spelling Autocorrect]
 ** xref:table-of-contents[Table of Contents (tableofcontents)]
 * xref:community-plugins[Community plugins]
-** xref:advanced-list[Advanced List (advlist)]
+** xref:advanced-list[List Styles (advlist)]
 ** xref:anchor[Anchor (anchor)]
 ** xref:autolink[Autolink (autolink)]
 ** xref:autoresize[Autoresize (autoresize)]
@@ -181,8 +181,8 @@ include::partial$plugin-files/plugin-file-list-tableofcontents.adoc[]
 [[community-plugins]]
 == Community plugins
 
-[[advanced-list]]
-=== Advanced List (`+advlist+`)
+[[list-styles]]
+=== List Styles (`+advlist+`)
 
 include::partial$plugin-files/plugin-file-list-advlist.adoc[]
 
