--- a/modules/ROOT/pages/advlist.adoc
+++ b/modules/ROOT/pages/advlist.adoc
@@ -1,12 +1,16 @@
-= Advanced List plugin
-:navtitle: Advanced List
+= List Styles plugin
+:navtitle: List Styles
 :description: Create styled number and bulleted lists.
 :keywords: advlist, advlist_bullet_styles, advlist_number_styles
+:pluginname: List Styles
 :plugincode: advlist
 
 The `+advlist+` plugin extends the core `+bullist+` and `+numlist+` toolbar controls by adding CSS `+list-style-type+` styled number formats and bullet types to the controls.
 
 IMPORTANT: The xref:lists.adoc[Lists] (`+lists+`) plugin must be activated for the `+advlist+` plugin to work.
+
+[TIP]
+As of {productname} 7.0, the Advanced Lists plugin has been renamed to {pluginname}. When adding {pluginname} in your editor, continue to use {plugincode}.
 
 == Basic setup
 
@@ -28,7 +32,7 @@ include::partial$configuration/advlist_number_styles.adoc[leveloffset=+1]
 
 == Commands
 
-The Advanced Lists plugin provides the following {productname} commands.
+The List Styles plugin provides the following {productname} commands.
 
 include::partial$commands/advlist-cmds.adoc[]
 
