--- a/modules/ROOT/pages/basic-setup.adoc
+++ b/modules/ROOT/pages/basic-setup.adoc
@@ -83,7 +83,7 @@ For information on the differences between the classic and inline editing modes,
 
 The functionality of {productname} is extended by using plugins, which are enabled using the `+plugins+` option.
 
-The following example enables the lists (`+lists+`), Advanced Lists (`+advlist+`), Link (`+link+`), and Image (`+image+`) plugins.
+The following example enables the lists (`+lists+`), List Styles (`+advlist+`), Link (`+link+`), and Image (`+image+`) plugins.
 
 [source,js]
 ----
