--- a/modules/ROOT/pages/work-with-plugins.adoc
+++ b/modules/ROOT/pages/work-with-plugins.adoc
@@ -4,7 +4,7 @@
 :description: TinyMCE is an incredibly powerful, flexible and customizable rich text editor. This section demonstrates the power of plugins with several working examples.
 :keywords: plugin
 
-For most developers, the real power of {productname}'s functionality is found in its plugins. xref:plugins.adoc[Plugins] either extend default editor functionality or add new functionality. For example, the xref:advlist.adoc[Advanced List] plugin adds extra options to the toolbar's existing list controls, while the xref:code.adoc[Code] plugin adds entirely new functionality.
+For most developers, the real power of {productname}'s functionality is found in its plugins. xref:plugins.adoc[Plugins] either extend default editor functionality or add new functionality. For example, the xref:advlist.adoc[List Styles] plugin adds extra options to the toolbar's existing list controls, while the xref:code.adoc[Code] plugin adds entirely new functionality.
 
 Because most people install {productname} via {cloudname} or by downloading a package, they mistakenly think plugins are part of the {productname} "core". While all of the plugins (excluding the professional features) are included in those packages, each plugin is in a separate .js file. In fact, if you use the link:{gettiny}/custom-builds/[custom package] download option (TinyMCE 4 only), you're able to select only the plugins you want to be included, or you can exclude all of the plugins built by the {productname} team.
 
@@ -84,11 +84,11 @@ tinymce.init({
 
 Even if you found the above example quite easy, hang with us we'll show you how to extend {productname}'s default ordered and unordered lists. If on the other hand that was all a bit new, read this example to help your understanding.
 
-=== Advanced List
+=== List Styles
 
-The xref:advlist.adoc[Advanced List] plugin extends the default unordered and ordered list toolbar controls provided in the Lists plugin by adding CSS `+list-style-type+` styled number formats and bullet types to the controls.
+The xref:advlist.adoc[List Styles] plugin extends the default unordered and ordered list toolbar controls provided in the Lists plugin by adding CSS `+list-style-type+` styled number formats and bullet types to the controls.
 
-As before, let's start by adding the `+plugins+` key and assign the value `+'advlist lists'+`. This will enable the Advanced List and Lists plugins.
+As before, let's start by adding the `+plugins+` key and assign the value `+'advlist lists'+`. This will enable the List Styles and Lists plugins.
 
 [source,js]
 ----
@@ -110,7 +110,7 @@ Many plugin options have more than one possible value. The `+advlist_bullet_styl
 
 Don't worry if you can't remember all these values. The xref:plugins.adoc[plugins section] goes into great detail explaining all the plugins options, toolbars, and menu controls.
 
-Let's add the Advanced List options and give them some of the available options.
+Let's add the List Styles options and give them some of the available options.
 
 [source,js]
 ----
