DOC-2300: Replace Skins & Icons Packs with Enhanced Skins & Icon Packs in 7x docs.

--- a/-new-material-templates/release-notes-template/ROOT/nav.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/nav.adoc
@@ -10,7 +10,7 @@
 **** xref:<x.y[.z]>-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:<x.y[.z]>-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
 **** xref:<x.y[.z]>-release-notes.adoc#accompanying-open-source-plugin-end-of-life-announcement[Accompanying Open Source Plugin end-of-life announcement]
-**** xref:<x.y[.z]>-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:<x.y[.z]>-release-notes.adoc#accompanying-enhanced-skins-and-icon-packs-changes[Accompanying Enhanced Skins & Icon Packs changes]
 **** xref:<x.y[.z]>-release-notes.adoc#improvements[Improvements]
 **** xref:<x.y[.z]>-release-notes.adoc#additions[Additions]
 **** xref:<x.y[.z]>-release-notes.adoc#changes[Changes]
