--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -254,7 +254,7 @@
 ** Editor appearance
 *** xref:editor-skin.adoc[Skins]
 *** xref:editor-icons.adoc[Icons]
-*** xref:premium-skins-and-icons.adoc[Tiny Skins and Icon Packs]
+*** xref:enhanced-skins-and-icon-packs.adoc[Enhanced Skins & Icon Packs]
 *** xref:editor-theme.adoc[Themes]
 ** Menus
 *** xref:menus-configuration-options.adoc[Options]
@@ -400,7 +400,7 @@
 **** xref:7.0-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 **** xref:7.0-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 **** xref:7.0-release-notes.adoc#accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
-**** xref:7.0-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:7.0-release-notes.adoc#accompanying-enhanced-skins-and-icon-packs-changes[Accompanying Enhanced Skins & Icon Packs changes]
 **** xref:7.0-release-notes.adoc#improvements[Improvements]
 **** xref:7.0-release-notes.adoc#additions[Additions]
 **** xref:7.0-release-notes.adoc#changes[Changes]
