--- a/modules/ROOT/pages/creating-an-icon-pack.adoc
+++ b/modules/ROOT/pages/creating-an-icon-pack.adoc
@@ -20,7 +20,7 @@ A {productname} icon pack is a `+.js+` file containing strings of https://develo
 
 An icon pack only requires the custom icons to be included; the default {productname} icons are used as a fallback for icons missing from the custom icon pack.
 
-NOTE: Don't forget to explore our ready-to-use Premium Icon Packs such as 'Material' icons, and a smaller version of our default icons at xref:premium-skins-and-icons.adoc[{prem_skins_icons}].
+NOTE: Don't forget to explore our ready-to-use Premium Icon Packs such as 'Material' icons, and a smaller version of our default icons at xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}].
 
 == Creating a TinyMCE icon pack
 
