--- a/modules/ROOT/pages/enhanced-skins-and-icon-packs.adoc
+++ b/modules/ROOT/pages/enhanced-skins-and-icon-packs.adoc
@@ -1,13 +1,13 @@
-= Tiny Skins and Icon Packs
-:navtitle: Tiny Skins and Icon Packs
+= Enhanced Skins & Icon Packs
+:navtitle: Enhanced Skins & Icon Packs
 :description: Quickly give TinyMCE a new look.
 :keywords: skin, skins, icon, icons, material, bootstrap, customize, theme
 
 The {prem_skins_icons} lets you quickly give {productname} a new look. Just choose one of our pre-made skins and icon packs.
 
-== How to use a premium skin
+== How to use a Enhanced skins
 
-NOTE: premium skins are only available with a link:{pricingpage}/[paid TinyMCE subscriptions].
+NOTE: Enhanced skins are only available with a link:{pricingpage}/[paid TinyMCE subscriptions].
 
 Use the xref:editor-skin.adoc#skin[skin] option, in combination with the xref:add-css-options.adoc#content_css[content_css] option and the values listed below.
 
@@ -32,7 +32,7 @@ Available values for xref:add-css-options.adoc#content_css[content_css]:
 * fabric
 * fluent
 
-=== Example: using a premium skin
+=== Example: using a Enhanced skin
 
 [source,js]
 ----
