--- a/modules/ROOT/partials/integrations/webcomponent-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/webcomponent-tech-ref.adoc
@@ -403,7 +403,7 @@ To apply a custom skin to the editor, use the `+skin+` attribute. For example:
 For information on:
 
 * Using the `+skin+` option, see: xref:editor-skin.adoc#skin[User interface options - `+skin+`].
-* {companyname} premium skins, see: xref:premium-skins-and-icons.adoc[Tiny Skins and Icon Packs].
+* {companyname} enhanced skins, see: xref:enhanced-skins-and-icon-packs.adoc[Enhanced Skins & Icon Packs].
 * Creating a custom skin for {productname}, see: xref:creating-a-skin.adoc[Create a skin for {productname}].
 
 [[setting-the-images-upload-url]]
@@ -491,7 +491,7 @@ Use this attribute if the icon pack is bundled with {productname} (including cus
 For information on:
 
 * Using the `+icons+` option, see: xref:editor-icons.adoc#icons[User interface options - `+icons+`].
-* {companyname} premium icon packs, see: xref:premium-skins-and-icons.adoc[Tiny Skins and Icon Packs].
+* {companyname} premium icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Enhanced Skins & Icon Packs].
 * Creating a custom icon pack for {productname}, see: xref:creating-an-icon-pack.adoc[Create an icon pack for {productname}].
 
 [[setting-the-icon-pack-url]]
@@ -509,7 +509,7 @@ Use this attribute if the icon pack is hosted on a web site. If the icon pack is
 For information on:
 
 * Using the `+icons_url+` option, see: xref:editor-icons.adoc#icons_url[User interface options - `+icons_url+`].
-* {companyname} premium icon packs, see: xref:premium-skins-and-icons.adoc[Tiny Skins and Icon Packs].
+* {companyname} premium icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Enhanced Skins & Icon Packs].
 * Creating a custom icon pack for {productname}, see: xref:creating-an-icon-pack.adoc[Create an icon pack for {productname}].
 
 [[setting-additional-configuration-options]]
