--- a/modules/ROOT/partials/misc/plugin-support-table.adoc
+++ b/modules/ROOT/partials/misc/plugin-support-table.adoc
@@ -4,4 +4,4 @@
 The following list of premium plugins are supported by {companynameformal} for {productname} {productminorversion}:
 
 include::partial$misc/premium-plugin-list.adoc[]
-* xref:premium-skins-and-icons.adoc[{prem_skins_icons}]
+* xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}]
