--- a/modules/ROOT/partials/misc/shipped-content-css.adoc
+++ b/modules/ROOT/partials/misc/shipped-content-css.adoc
@@ -21,6 +21,6 @@ tinymce.init({
 
 These content CSS files can also be used as a template for creating a custom content CSS file for the editor. For the CSS files, see: https://github.com/tinymce/tinymce-dist/tree/master/skins/content[{prodnamecode}-dist GitHub Repository - Content CSS files].
 
-{companyname} also provides content CSS files with the premium skins, for a list of premium content CSS files, see: xref:premium-skins-and-icons.adoc[{prem_skins_icons}].
+{companyname} also provides content CSS files with the enhanced skins, for a list of premium content CSS files, see: xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}].
 
 {companyname} recommends using the same CSS for both the editor and the page where the editor content will be rendered.
