--- a/modules/ROOT/partials/module-loading/bundling-skin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-skin-files.adoc
@@ -32,9 +32,9 @@ Dark skin (oxide-dark)::
 ./skins/ui/tinymce-5-dark/skin.shadowdom.css
 ....
 
-== Premium Skins
+== Enhanced Skins
 
-For information on premium editor skins, see: xref:premium-skins-and-icons.adoc[{prem_skins_icons}].
+For information on Enhanced editor skins, see: xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}].
 
 Bootstrap skin::
 ....
