DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7x docs.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -287,7 +287,6 @@
 *** xref:a11ychecker.adoc[Accessibility Checker]
 *** xref:advcode.adoc[Advanced Code Editor]
 *** xref:advtable.adoc[Advanced Tables]
-*** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:ai.adoc[AI Assistant]
 **** xref:ai-proxy.adoc[AI proxy server reference guide]
@@ -326,6 +325,7 @@
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 *** xref:autocorrect.adoc[Spelling Autocorrect]
 *** xref:tableofcontents.adoc[Table of Contents]
+*** xref:advanced-templates.adoc[Template]
 *** Tiny Drive
 **** xref:tinydrive-introduction.adoc[Introduction]
 **** xref:tinydrive-getting-started.adoc[Getting started]
