--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -48,12 +48,6 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Advanced Templates
-:plugincode: advtemplate
-:pluginpage: advanced-templates.adoc
-include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
-
-:plugincategory: premium
 :pluginname: Advanced Typography
 :plugincode: typography
 :pluginpage: advanced-typography.adoc
@@ -228,6 +222,12 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincategory: opensource
 :pluginname: Table
 :plugincode: table
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
+:pluginname: Template
+:plugincode: advtemplate
+:pluginpage: advanced-templates.adoc
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
