--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -23,12 +23,6 @@ Add advanced functionality to tables.
 
 a|
 [.lead]
-xref:advanced-templates.adoc[Advanced Templates]
-
-Create and edit complex templates in {productname} for use with {productname}.
-
-a|
-[.lead]
 xref:advanced-typography.adoc[Advanced Typography]
 
 Replace common typewriter-style characters with their professional typesetter equivalents.
@@ -146,6 +140,12 @@ a|
 xref:autocorrect.adoc[Spelling Autocorrect]
 
 Add autocorrection of common typos and spelling errors as well as capitalization correction to {productname}.
+
+a|
+[.lead]
+xref:advanced-templates.adoc[Template]
+
+Create and edit complex templates in {productname} for use with {productname}.
 
 a|
 [.lead]
