--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -67,7 +67,7 @@ a|
 [.lead]
 xref:advtable.adoc[Enhanced Tables]
 
-Add advanced functionality to tables.
+Add enhanced functionality to tables.
 
 a|
 [.lead]
